Fix concatenate/minify js in gulp build, footer/thead styling. Thead is now sticky to top of page, and footer has more spacing.

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -40,7 +40,8 @@ nav {
 }
 nav {
   .brand {
-    padding: 0.5em 0.5em;
+    padding: 0.5rem 0.5rem;
+    font-size: 2rem;
   }
   ul {
     display: inline-flex;
@@ -64,7 +65,7 @@ nav {
 .table {
   width: 900px;
 }
-.thead {
+.header {
   font-family: 'Exo 2', sans-serif;
   font-size: 0.8rem;
   color: rgba(33,33,33,0.7);
@@ -74,22 +75,28 @@ nav {
   pointer-events: none; //this is temporary, until this column has finished loading you can't click to sort.
   cursor: wait;
   user-select: none;
+  position: sticky;
+  top: 0px;
+  z-index: 5;
 }
-#thead-Cryptocurrency {
+.table-row-header {
+  border: none;
+}
+#header-Cryptocurrency {
   width: 45%;
   padding-left: 80px;
 }
-#thead-Marketcap {
+#header-Marketcap {
   width: 20%;
   text-align: right;
   padding-right: 20px;
 }
-#thead-Price {
+#header-Price {
   width: 10%;
   text-align: right;
   padding-right: 20px;
 }
-#thead-Change {
+#header-Change {
   width: 25%;
   text-align: center;
 }
@@ -205,6 +212,7 @@ td {
   //display: flex;
 }
 .footer-resources-title {
+  font-size: 1.25rem;
   padding-top: 15px;
   padding-bottom: 15px;
   text-align: center;
